# victor-dataanalysis

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_dataanalysis_capabilities.py  test_dataanalysis_capability_config_service.py  test_dataanalysis_handlers.py
victor_dataanalysis/: __init__.py  assistant.py  capabilities.py  conversation_enhanced.py  enrichment.py  escape_hatches.py  handlers.py  mode_config.py  prompts.py  safety.py  safety_enhanced.py  tool_dependencies.py  tool_dependencies.yaml  victor-vertical.toml
victor_dataanalysis/rl/: __init__.py
victor_dataanalysis/teams/: __init__.py  personas.py
victor_dataanalysis/workflows/: __init__.py  automl_pipeline.yaml  data_cleaning.yaml  eda_pipeline.yaml  ml_pipeline.yaml  statistical_analysis.yaml
